Analiza set de date pt2
transformare NaN -> number

--- a/Dataset/Analysis.ipynb
+++ b/Dataset/Analysis.ipynb
@@ -128,6 +128,105 @@
     "- Age = la fel nu conteaza\n",
     "- Logement = unde o tii (apartament cu doua camere, casa) de ce ar conta asta ?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coloane non-numerice: Index(['Horodateur', 'Sexe', 'Age', 'Race', 'Nombre', 'Logement', 'Zone',\n",
+      "       'Abondance', 'Plus'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "non_numeric_columns = data.select_dtypes(exclude=['number']).columns\n",
+    "print(\"Coloane non-numerice:\", non_numeric_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Sexe  Race  Zone  Abondance  Plus\n",
+      "0        0    12     2          3   803\n",
+      "1        0    12     2          3   803\n",
+      "2        0     4     2          3   257\n",
+      "3        0     4     1          2   288\n",
+      "4        0    12     1          2   803\n",
+      "...    ...   ...   ...        ...   ...\n",
+      "3138     0     9     1          2   519\n",
+      "3139     0     5     1          2   803\n",
+      "3140     1     0     0          2   803\n",
+      "3141     1     1     1          2   803\n",
+      "3142     0     1     0          2   803\n",
+      "\n",
+      "[3143 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "categorical_columns = ['Sexe', 'Race', 'Zone', 'Abondance', 'Plus']  \n",
+    "\n",
+    "encoder = LabelEncoder()\n",
+    "\n",
+    "for col in categorical_columns:\n",
+    "    data[col] = encoder.fit_transform(data[col])\n",
+    "\n",
+    "print(data[categorical_columns])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'F'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_excel(file_path)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Creează matricea de corelație\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m correlation_matrix \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39;49mcorr()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb#X12sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# Vizualizează matricea de corelație\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/user/Documents/GitHub/FacultateAI/Dataset/Analysis.ipynb#X12sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m10\u001b[39m, \u001b[39m8\u001b[39m))\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/pandas/core/frame.py:11049\u001b[0m, in \u001b[0;36mDataFrame.corr\u001b[0;34m(self, method, min_periods, numeric_only)\u001b[0m\n\u001b[1;32m  11047\u001b[0m cols \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m  11048\u001b[0m idx \u001b[39m=\u001b[39m cols\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m> 11049\u001b[0m mat \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39;49mto_numpy(dtype\u001b[39m=\u001b[39;49m\u001b[39mfloat\u001b[39;49m, na_value\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49mnan, copy\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m  11051\u001b[0m \u001b[39mif\u001b[39;00m method \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpearson\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m  11052\u001b[0m     correl \u001b[39m=\u001b[39m libalgos\u001b[39m.\u001b[39mnancorr(mat, minp\u001b[39m=\u001b[39mmin_periods)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/pandas/core/frame.py:1993\u001b[0m, in \u001b[0;36mDataFrame.to_numpy\u001b[0;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[1;32m   1991\u001b[0m \u001b[39mif\u001b[39;00m dtype \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1992\u001b[0m     dtype \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdtype(dtype)\n\u001b[0;32m-> 1993\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mgr\u001b[39m.\u001b[39;49mas_array(dtype\u001b[39m=\u001b[39;49mdtype, copy\u001b[39m=\u001b[39;49mcopy, na_value\u001b[39m=\u001b[39;49mna_value)\n\u001b[1;32m   1994\u001b[0m \u001b[39mif\u001b[39;00m result\u001b[39m.\u001b[39mdtype \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m dtype:\n\u001b[1;32m   1995\u001b[0m     result \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(result, dtype\u001b[39m=\u001b[39mdtype)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/pandas/core/internals/managers.py:1694\u001b[0m, in \u001b[0;36mBlockManager.as_array\u001b[0;34m(self, dtype, copy, na_value)\u001b[0m\n\u001b[1;32m   1692\u001b[0m         arr\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mwriteable \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m   1693\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1694\u001b[0m     arr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interleave(dtype\u001b[39m=\u001b[39;49mdtype, na_value\u001b[39m=\u001b[39;49mna_value)\n\u001b[1;32m   1695\u001b[0m     \u001b[39m# The underlying data was copied within _interleave, so no need\u001b[39;00m\n\u001b[1;32m   1696\u001b[0m     \u001b[39m# to further copy if copy=True or setting na_value\u001b[39;00m\n\u001b[1;32m   1698\u001b[0m \u001b[39mif\u001b[39;00m na_value \u001b[39mis\u001b[39;00m lib\u001b[39m.\u001b[39mno_default:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/pandas/core/internals/managers.py:1753\u001b[0m, in \u001b[0;36mBlockManager._interleave\u001b[0;34m(self, dtype, na_value)\u001b[0m\n\u001b[1;32m   1751\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1752\u001b[0m         arr \u001b[39m=\u001b[39m blk\u001b[39m.\u001b[39mget_values(dtype)\n\u001b[0;32m-> 1753\u001b[0m     result[rl\u001b[39m.\u001b[39;49mindexer] \u001b[39m=\u001b[39m arr\n\u001b[1;32m   1754\u001b[0m     itemmask[rl\u001b[39m.\u001b[39mindexer] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   1756\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m itemmask\u001b[39m.\u001b[39mall():\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'F'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Citește fișierul Excel\n",
+    "file_path =  '/Users/user/Documents/GitHub/FacultateAI/Homework/dataset.xlsx'   # Înlocuiește cu calea ta\n",
+    "data = pd.read_excel(file_path)\n",
+    "\n",
+    "# Creează matricea de corelație\n",
+    "correlation_matrix = data.corr()\n",
+    "\n",
+    "# Vizualizează matricea de corelație\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt='.2f', linewidths=0.5)\n",
+    "plt.title(\"Matricea de corelație\")\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
