--- a/Dataset/Analysis.ipynb
+++ b/Dataset/Analysis.ipynb
@@ -2120,6 +2120,47 @@
    "source": [
     "- Am combinat intelligent cu perseverent -> scot perseverant de tot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = path = '/Users/user/Documents/GitHub/FacultateAI/Dataset/dataset_final_v1.xlsx'\n",
+    "data_final = pd.read_excel(path)\n",
+    "\n",
+    "data_final = data_final.drop(columns=['Perséverant'])\n",
+    "\n",
+    "data_final.to_excel('/Users/user/Documents/GitHub/FacultateAI/Dataset/dataset_final_v1.xlsx', index=False)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atributele din setul de date sunt:\n",
+      "Race | Nombre | Zone | Obs | Timide | Calme | Effrayé | Intelligent | Vigilant | Affectueux | Amical | Solitaire | Brutal | Dominant | Agressif | Impulsif | Prévisible | Distrait | Abondance | Pred\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = path = '/Users/user/Documents/GitHub/FacultateAI/Dataset/dataset_final_v1.xlsx'\n",
+    "data_final = pd.read_excel(path)\n",
+    "\n",
+    "atribute = data_final.columns\n",
+    "atribute_formatate = \" | \".join(atribute)\n",
+    "print(\"Atributele din setul de date sunt:\")\n",
+    "print(atribute_formatate)"
+   ]
   }
  ],
  "metadata": {
