--- a/Dataset/Analysis.ipynb
+++ b/Dataset/Analysis.ipynb
@@ -2525,6 +2525,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '/Users/user/Documents/GitHub/FacultateAI/Dataset/dataset_final_v1.xlsx'\n",
+    "data_final = pd.read_excel(file_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 232,
    "metadata": {},
    "outputs": [
